--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "axios": "^1.6.0",
+    "formik": "^2.4.5",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +23,9 @@
     "redux": "^4.2.1",
     "typescript": "^4.9.5",
     "uniqid": "^5.4.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2",
+    "yup-phone": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
